fixed label too close to input field

--- a/Resources/Private/Less/Themes/UBMa.less
+++ b/Resources/Private/Less/Themes/UBMa.less
@@ -184,3 +184,9 @@ span#copyright {
         }
     }
 }
+
+.tx-dlf-listview {
+    label:nth-of-type(2) {
+        padding-left: 10px;
+    }
+}
