--- a/Resources/Public/Css/BaseDesign.css
+++ b/Resources/Public/Css/BaseDesign.css
@@ -390,6 +390,9 @@ span#copyright {
 .tx-dlf-metadata h1:before {
   content: unset;
 }
+.tx-dlf-listview label:nth-of-type(2) {
+  padding-left: 10px;
+}
 .content {
   position: relative;
   padding: 30px 0;
